syntax = "proto3";

package ru.nicshal.protobuf;

option java_multiple_files = true;

message InitialMessage {
    int32 firstValue= 1;
    int32 lastValue = 2;
}

message ValueMessage {
    int32 value = 1;
}

service RemoteSequenceService {
    rpc generateSequence(InitialMessage) returns (stream ValueMessage);
}
